HW2/E-1.3.42-Montehall_simplified/wdir_msg/compile.err

Montehall_simplified.java:6: error: illegal start of expression
        public static void main(String[] args) {
        ^
1 error


